20160828 一応ひと段落。ScheduleActivityのボタンを押したときの動作とデバッグした時に感じた違和感を直したらアラームを作っていこう。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">InnovativeAlarmClock</string>
     <string name="noSchedule">今日の予定はありません。</string>
     <string name="edit">予定を編集</string>
+    <string name="add">追加</string>
+    <string name="erase">削除</string>
 </resources>
