20161024 エラー退治完了！つるつるぴかぴかのまだまだ小さいコードですが何卒よろしく。あとは、デザイン・ホームに戻るボタン・ホームのデザイン・何より大事な目覚まし実装など。がんばれ！コードは君の味方！

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="edit">予定を編集</string>
     <string name="add">追加</string>
     <string name="erase">削除</string>
+    <string name="save">保存</string>
     <string name="eventLog_button">ButtonPushedEvent</string>
     <string name="eventLog_activityAndClass">classExecutedEvent</string>
 </resources>
